tests/snapshots/fixtures_snapshot__fixtures__raw_data__csharp__date_format_e8601dn_sas7bdat.snap
---
source: tests/fixtures_snapshot.rs
expression: snapshot.clone()
---
{
  "columns": [
    "E8601DN",
    "E8601DN10"
  ],
  "row_count": 95,
  "rows": [
    [
      {
        "kind": "number",
        "value": -11928470399.999
      },
      {
        "kind": "number",
        "value": -11928470399.999
      }
    ],
    [
      {
        "kind": "number",
        "value": -11896934400.001
      },
      {
        "kind": "number",
        "value": -11896934400.001
      }
    ],
    [
      {
        "kind": "number",
        "value": -0.0010000000038417056
      },
      {
        "kind": "number",
        "value": -0.0010000000038417056
      }
    ],
    [
      {
        "kind": "number",
        "value": 0.001
      },
      {
        "kind": "number",
        "value": 0.001
      }
    ],
    [
      {
        "kind": "number",
        "value": 315619199.999
      },
      {
        "kind": "number",
        "value": 315619199.999
      }
    ],
    [
      {
        "kind": "number",
        "value": 315619200.0
      },
      {
        "kind": "number",
        "value": 315619200.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 253686211200.0
      },
      {
        "kind": "number",
        "value": 253686211200.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 253717660800.0
      },
      {
        "kind": "number",
        "value": 253717660800.0
      }
    ],
    [
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "missing",
        "value": null
      }
    ],
    [
      {
        "kind": "number",
        "value": 1890691201.123
      },
      {
        "kind": "number",
        "value": 1890691201.123
      }
    ],
    [
      {
        "kind": "number",
        "value": 1887580810.234
      },
      {
        "kind": "number",
        "value": 1887580810.234
      }
    ],
    [
      {
        "kind": "number",
        "value": 1884729660.456
      },
      {
        "kind": "number",
        "value": 1884729660.456
      }
    ],
    [
      {
        "kind": "number",
        "value": 1881792600.567
      },
      {
        "kind": "number",
        "value": 1881792600.567
      }
    ],
    [
      {
        "kind": "number",
        "value": 1878771600.678
      },
      {
        "kind": "number",
        "value": 1878771600.678
      }
    ],
    [
      {
        "kind": "number",
        "value": 1876039200.789
      },
      {
        "kind": "number",
        "value": 1876039200.789
      }
    ],
    [
      {
        "kind": "number",
        "value": 1873110896.89
      },
      {
        "kind": "number",
        "value": 1873110896.89
      }
    ],
    [
      {
        "kind": "number",
        "value": 1870432496.987
      },
      {
        "kind": "number",
        "value": 1870432496.987
      }
    ],
    [
      {
        "kind": "number",
        "value": 1867149296.654
      },
      {
        "kind": "number",
        "value": 1867149296.654
      }
    ],
    [
      {
        "kind": "number",
        "value": 1864643696.321
      },
      {
        "kind": "number",
        "value": 1864643696.321
      }
    ],
    [
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "missing",
        "value": null
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679097600.0
      },
      {
        "kind": "number",
        "value": 1679097600.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679097600.001
      },
      {
        "kind": "number",
        "value": 1679097600.001
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679097600.05
      },
      {
        "kind": "number",
        "value": 1679097600.05
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679097601.02
      },
      {
        "kind": "number",
        "value": 1679097601.02
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679097659.5
      },
      {
        "kind": "number",
        "value": 1679097659.5
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679097661.3
      },
      {
        "kind": "number",
        "value": 1679097661.3
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679099100.45
      },
      {
        "kind": "number",
        "value": 1679099100.45
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679099375.0
      },
      {
        "kind": "number",
        "value": 1679099375.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679099475.0
      },
      {
        "kind": "number",
        "value": 1679099475.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679100100.45
      },
      {
        "kind": "number",
        "value": 1679100100.45
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679101199.932
      },
      {
        "kind": "number",
        "value": 1679101199.932
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679101199.987
      },
      {
        "kind": "number",
        "value": 1679101199.987
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679101199.998
      },
      {
        "kind": "number",
        "value": 1679101199.998
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679101199.999
      },
      {
        "kind": "number",
        "value": 1679101199.999
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679102625.678
      },
      {
        "kind": "number",
        "value": 1679102625.678
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679105100.45
      },
      {
        "kind": "number",
        "value": 1679105100.45
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679106100.45
      },
      {
        "kind": "number",
        "value": 1679106100.45
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679131799.0
      },
      {
        "kind": "number",
        "value": 1679131799.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679131861.0
      },
      {
        "kind": "number",
        "value": 1679131861.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679133599.932
      },
      {
        "kind": "number",
        "value": 1679133599.932
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679133599.987
      },
      {
        "kind": "number",
        "value": 1679133599.987
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679133599.998
      },
      {
        "kind": "number",
        "value": 1679133599.998
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679133599.999
      },
      {
        "kind": "number",
        "value": 1679133599.999
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679133603.6
      },
      {
        "kind": "number",
        "value": 1679133603.6
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679134103.65
      },
      {
        "kind": "number",
        "value": 1679134103.65
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679136103.85
      },
      {
        "kind": "number",
        "value": 1679136103.85
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679138999.0
      },
      {
        "kind": "number",
        "value": 1679138999.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679139061.0
      },
      {
        "kind": "number",
        "value": 1679139061.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679140798.954
      },
      {
        "kind": "number",
        "value": 1679140798.954
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679140798.965
      },
      {
        "kind": "number",
        "value": 1679140798.965
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679140798.953
      },
      {
        "kind": "number",
        "value": 1679140798.953
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679140798.964
      },
      {
        "kind": "number",
        "value": 1679140798.964
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679140799.932
      },
      {
        "kind": "number",
        "value": 1679140799.932
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679140799.987
      },
      {
        "kind": "number",
        "value": 1679140799.987
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679140799.998
      },
      {
        "kind": "number",
        "value": 1679140799.998
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679140799.999
      },
      {
        "kind": "number",
        "value": 1679140799.999
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679140800.0
      },
      {
        "kind": "number",
        "value": 1679140800.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679140800.01
      },
      {
        "kind": "number",
        "value": 1679140800.01
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679140800.954
      },
      {
        "kind": "number",
        "value": 1679140800.954
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679140800.965
      },
      {
        "kind": "number",
        "value": 1679140800.965
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679140801.953
      },
      {
        "kind": "number",
        "value": 1679140801.953
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679140801.964
      },
      {
        "kind": "number",
        "value": 1679140801.964
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679142104.45
      },
      {
        "kind": "number",
        "value": 1679142104.45
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679142104.45
      },
      {
        "kind": "number",
        "value": 1679142104.45
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167106.05
      },
      {
        "kind": "number",
        "value": 1679167106.05
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167106.15
      },
      {
        "kind": "number",
        "value": 1679167106.15
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167106.25
      },
      {
        "kind": "number",
        "value": 1679167106.25
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167106.35
      },
      {
        "kind": "number",
        "value": 1679167106.35
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167106.45
      },
      {
        "kind": "number",
        "value": 1679167106.45
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167106.55
      },
      {
        "kind": "number",
        "value": 1679167106.55
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167106.65
      },
      {
        "kind": "number",
        "value": 1679167106.65
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167106.75
      },
      {
        "kind": "number",
        "value": 1679167106.75
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167106.85
      },
      {
        "kind": "number",
        "value": 1679167106.85
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167106.95
      },
      {
        "kind": "number",
        "value": 1679167106.95
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167107.05
      },
      {
        "kind": "number",
        "value": 1679167107.05
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167107.15
      },
      {
        "kind": "number",
        "value": 1679167107.15
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167107.25
      },
      {
        "kind": "number",
        "value": 1679167107.25
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167107.35
      },
      {
        "kind": "number",
        "value": 1679167107.35
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167107.45
      },
      {
        "kind": "number",
        "value": 1679167107.45
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167107.55
      },
      {
        "kind": "number",
        "value": 1679167107.55
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167107.65
      },
      {
        "kind": "number",
        "value": 1679167107.65
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167107.75
      },
      {
        "kind": "number",
        "value": 1679167107.75
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167107.85
      },
      {
        "kind": "number",
        "value": 1679167107.85
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679167107.95
      },
      {
        "kind": "number",
        "value": 1679167107.95
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679169272.1
      },
      {
        "kind": "number",
        "value": 1679169272.1
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679182199.0
      },
      {
        "kind": "number",
        "value": 1679182199.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679182261.0
      },
      {
        "kind": "number",
        "value": 1679182261.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679183998.954
      },
      {
        "kind": "number",
        "value": 1679183998.954
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679183998.965
      },
      {
        "kind": "number",
        "value": 1679183998.965
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679183998.953
      },
      {
        "kind": "number",
        "value": 1679183998.953
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679183998.964
      },
      {
        "kind": "number",
        "value": 1679183998.964
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679183999.932
      },
      {
        "kind": "number",
        "value": 1679183999.932
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679183999.987
      },
      {
        "kind": "number",
        "value": 1679183999.987
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679183999.998
      },
      {
        "kind": "number",
        "value": 1679183999.998
      }
    ],
    [
      {
        "kind": "number",
        "value": 1679183999.999
      },
      {
        "kind": "number",
        "value": 1679183999.999
      }
    ]
  ]
}
